cmake_minimum_required(VERSION 2.8)
project(main)
file(GLOB SRC "./src/*.cpp")
file(GLOB Clinet "./src/Client/*.cpp")
file(GLOB Timer "./src/Timer/*.cpp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DDEBUG")
include_directories(src src/Client rapidjson src/Timer)
add_executable(main main.cpp ${Clinet} ${Timer} ${SRC})
target_link_libraries(main pthread ssl crypto)